# rawdogpy

./: README.md  pyproject.toml
src/rawdog_osgood/: __init__.py  client.py
